Este cambio es para github

--- a/about.html
+++ b/about.html
@@ -42,6 +42,7 @@
     <p>Este es un nuevo ejemplo para ferb</p>
         <p>Esto es mas contenido que solo se puede
     ver si esta adentro del branch nuevo esto es un branch que esta adentro del nuevo branch</p>
+    <p>Este es nuevo contenido para github</p>
 
 
 
