nuevo cambio desde alex-version

--- a/about.html
+++ b/about.html
@@ -43,6 +43,7 @@
         <p>Esto es mas contenido que solo se puede
     ver si esta adentro del branch nuevo esto es un branch que esta adentro del nuevo branch</p>
     <p>Este es nuevo contenido para github</p>
+    <p>Este cambio biene desde alex-version1</p>
 
 
 
